--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
-  "name": "planning-taki",
+  "name": "planning-taki-root",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Monorepo root for Planning Taki",
   "scripts": {
-    "build": "npm run build --prefix client",
-    "start": "node server/server.js"
+    "start:server": "node server/server.js",
+    "start:client": "npm run dev --prefix client",
+    "dev": "npm-run-all --parallel start:server start:client",
+    "install:all": "npm install && npm install --prefix client && npm install --prefix server",
+    "build": "npm install --prefix client && npm run build --prefix client", // <-- Modified line
+    "start": "node server/server.js" // For Vercel or production start
   },
-  "dependencies": {},
-  "private": true
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "npm-run-all": "^4.1.5" // Example dependency
+    // Add other root dependencies if any
+  },
+  "devDependencies": {
+    // Add root dev dependencies if any
+  }
 }
