--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "start:client": "npm run dev --prefix client",
     "dev": "npm-run-all --parallel start:server start:client",
     "install:all": "npm install && npm install --prefix client && npm install --prefix server",
-    "build": "npm install --prefix client && npm run build --prefix client", // <-- Modified line
-    "start": "node server/server.js" // For Vercel or production start
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm-run-all": "^4.1.5" // Example dependency
-    // Add other root dependencies if any
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    // Add root dev dependencies if any
   }
 }
