--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:client": "npm run dev --prefix client",
     "dev": "npm-run-all --parallel start:server start:client",
     "install:all": "npm install && npm install --prefix client && npm install --prefix server",
-    "build": "npm install --prefix client && npm run build --prefix client",
+    "build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client",
     "start": "node server/server.js"
   },
   "author": "",
