--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
   "version": 2,
+
+  "builds": [
+    {
+      "src": "server/server.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": "client/dist/**" 
+      }
+    }
+  ],
+
   "routes": [
-    { "src": "/(.*)", "dest": "server/server.js" }
+    { "src": "/socket.io/(.*)", "dest": "server/server.js" }, 
+    { "src": "/(.*)",              "dest": "server/server.js" }
   ]
 }
