--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "scripts": {
+    "vercel-build": "npm install --prefix ../client && npm run build --prefix ../client",
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.19.0",
     "socket.io": "^4.7.5"
